syntax = "proto3";

package provider;

service Provider {
  rpc ProvisionAppConfig(ProvisionAppConfigRequest)
      returns(ProvisionAppConfigResponse) {}
  rpc DeprovisionAppConfig(DeprovisionAppConfigRequest)
      returns(DeprovisionAppConfigResponse) {}
  rpc GetSnapshot(GetSnapshotRequest) returns(stream GetSnapshotResponse) {}
  rpc RestoreSnapshot(stream RestoreSnapshotRequest)
      returns(RestoreSnapshotResponse) {}
}

message ConfigVariable {
  string name = 1;
  string value = 2;
  bool secret = 3;
}

message ProvisionAppConfigRequest {
  string app_name = 1;
  map<string, string> config = 2;
}
message ProvisionAppConfigResponse {
  repeated ConfigVariable config_variables = 1;
}

message DeprovisionAppConfigRequest { string app_name = 1; }
message DeprovisionAppConfigResponse {}

message GetSnapshotRequest { string app_name = 1; }
message GetSnapshotResponse { bytes chunk = 1; }

message RestoreSnapshotRequest {
  string app_name = 1;
  bytes chunk = 2;
}
message RestoreSnapshotResponse {}
